--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.20",
+    "json-server": "^1.0.0-beta.3",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
+    "react-router": "^7.0.2",
     "tailwindcss": "^3.4.16"
   },
   "devDependencies": {
